solved overflow issue for mobile images in caraousel

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -270,6 +270,8 @@
     width: 80vw;
     display: flex;
     height: 100%;
+    max-width: 80vw;
+    overflow-x: hidden;
   }
 
 
